# trust-score-aggregator

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  config.py  index.py  main.py
api/middleware/: __init__.py  rate_limit.py  x402.py
api/payments/: __init__.py  models.py  verifier.py
api/routes/: __init__.py  agents.py  badge.py  health.py  premium.py  scores.py
api/utils/: __init__.py  validation.py
contracts/: TrustScoreOracle.sol  hardhat.config.ts  package.json
contracts/contracts/: TrustScoreOracle.sol
contracts/contracts/interfaces/: ITrustScoreOracle.sol
contracts/interfaces/: ITrustScoreOracle.sol
contracts/scripts/: deploy.ts
contracts/test/: TrustScoreOracle.test.ts
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  (+10 more)
indexer/: __init__.py  config.py  main.py
indexer/listeners/: __init__.py  identity_listener.py  reputation_listener.py
indexer/models/: __init__.py  database.py  schemas.py
oracle_updater/: __init__.py  main.py
scoring/: __init__.py
scoring/base/: __init__.py  aggregator.py  time_decay.py
scoring/premium/: .gitkeep
scripts/: compute_scores.py  deploy_contract.py  start_api.py  start_indexer.py  test_x402.py
tests/: __init__.py  conftest.py  test_api.py  test_scoring.py  test_time_decay.py
(+8 files in other folders)
